# amc-go

./: go.mod  go.sum  main.go  settings.json
buggi/: buggi.go
fileio/: fileio.go  structs.go
header/: header.go
loginui/: loginui.go
rewrite_rust/: Cargo.toml
rewrite_rust/src/: buggi.rs  fileio.rs  header.rs  main.rs  solver.rs  ui.rs
solver/: solver.go
userinterface/: userinterface.go
