[package]
name = "stellar-amc"
version = "0.1.0"
edition = "2021"

[dependencies]
wreq = { version = "5.3", features = ["cookies", "json", "socks"] }
wreq-util = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
colored = "3"
rand = "0.9"
rfd = "0.15"
base64 = "0.22"
anyhow = "1"
http = "1"
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
] }
